[gd_scene load_steps=11 format=3 uid="uid://cp6j2eswm0vn1"]

[ext_resource type="Script" uid="uid://befe606ow32q5" path="res://scripts/base.gd" id="1_h5ip5"]
[ext_resource type="PackedScene" uid="uid://dwkjaugy7ph2v" path="res://scenes/entities/components/health_component.tscn" id="2_baglu"]
[ext_resource type="Texture2D" uid="uid://dkbwqrit4y8g7" path="res://assets/base/base.png" id="2_h5ip5"]
[ext_resource type="PackedScene" uid="uid://cpflaq3jtiks" path="res://scenes/entities/components/health_bar.tscn" id="4_lmcj5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_40w10"]
atlas = ExtResource("2_h5ip5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvvcp"]
atlas = ExtResource("2_h5ip5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh5oj"]
atlas = ExtResource("2_h5ip5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqfsp"]
atlas = ExtResource("2_h5ip5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i6jx3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40w10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvvcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh5oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqfsp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ip5"]
size = Vector2(124, 123)

[node name="Base" type="Node2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_h5ip5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_i6jx3")

[node name="HealthComponent" parent="." instance=ExtResource("2_baglu")]
max_health = 666

[node name="HealthBar" parent="." instance=ExtResource("4_lmcj5")]
modulate = Color(0, 1, 0, 1)

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_h5ip5")

[connection signal="damage_taken" from="HealthComponent" to="." method="_on_health_component_damage_taken"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
